--- a/style.css
+++ b/style.css
@@ -148,15 +148,15 @@ aside div.estudiante img {
     width: 100%;
     height: 100%;
     border-radius: 50% 50%;
-    filter: grayscale(1);
-  filter: blur(1);
+    filter: sepia(1);
+  filter: blur(4);
 }
 
 aside div.estudiante img:hover {
     transition: all ease 0.25s;
     transform: scale(1.1);
-    filter: grayscale(0);
-  fliter: blur(0);
+    filter: sepia(0);
+  filter: blur(0);
 }
 
 aside div.tope {
